--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Monitor</title>
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js"></script>
-    <link rel="stylesheet" href="../static/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="static/style.css">
 
     <!-- To display open street maps (OSM) -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -23,6 +22,6 @@
     </div>
     <div id="map" style="height: 500px;"></div>
 
-    <script src="../static/script.js" defer></script>
+    <script src="static/script.js" defer></script>
 </body>
 </html>
