--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -42,3 +42,30 @@ canvas {
     display: block;
     margin: 20px auto;
 }
+
+#alert {
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: white;
+    background-color: red;
+    padding: 20px 40px; /* Add some padding for better appearance */
+    z-index: 1000;
+    animation: flash 1s infinite;
+    border-radius: 10px; /* Optional: add rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add shadow for better visibility */
+}
+
+
+@keyframes flash {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+}
+
+.hidden {
+    display: none;
+}
